--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <hr>
-        <img src="Images/avatar.png" width="120" height="120" alt="Avatar">
+        <img src="images/istockphoto-2041572395-612x612.jpg" width="120" height="120" alt="Avatar">
         <h1>Fulano de Tal</h1>
     <hr>
 
