--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <hr>
 
   <h2>Contato</h2>
-  <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
-  <p>(42) 99999-99999</p>
+  <p>Rua Palmeiras, São Francisco, Telêmaco Borba, Paraná</p>
+  <p>(42) 78787-7878</p>
   <p>emailfulano@gmail.com</p>
 
 </body>
