--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <hr>
         <h2> Contato </h2>
         <p>
-            <img src="images/localização.jpg" alt="Localização" widht="120" height="120"> Rua Francisco, Santa Rita, Telêmaco Borba, Paraná <br>
+                <img src="images/localização.jpg" alt="Localização" widht="120" height="120"> Rua João da Silva, Santo Angelo, Telêmaco Borba, Paraná <br>
             <img src="images/telefone.jpg" alt="Telefone" widht="120" height="120"> (42) 9999-9999 <br>
-            <img src="images/email.jpg" widht="120" height="120"> emailfulano@gmail.com <br>
+            <img src="images/email.jpg" alt="Email" widht="120" height="120"> emailfulano@gmail.com <br>
         </p>
         <hr>
     </body>
