--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <hr>
-        <img src="./images/Avatar.avif" alt="Avatar-de-Homem" width="120" height="120">
+        <img src="images/avatar.jpg" alt="Avatar-de-Homem" width="120" height="120">
         <h1> Fulano de Tal </h1>
         <hr>
         <h2> Perfil </h2>
