--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <hr>
-        <img src="images/avatar.jpg" alt="Avatar-de-Homem" width="120" height="120">
+        <img src="./images/avatar.jpg" alt="Avatar-de-homem" width="120" height="120">
         <h1> Fulano de Tal </h1>
         <hr>
         <h2> Perfil </h2>
@@ -33,19 +33,17 @@
         <hr>
         <h2> Experiência Profissional </h2>
         <p>
-            Empresa X (2018-2020) <br>
-            Empresa Y (2020-2022) <br>
-            Empresa Z (2022-Atual) <br>
+            Empresa X (2021-2022) <br>
+            Empresa Y (2022-2024) <br>
+            Empresa Z (2024-Atual) <br>
         </p>
         <hr>
         <h2> Contato </h2>
         <p>
-                <img src="images/localização.jpg" alt="Localização" widht="120" height="120"> Rua João da Silva, Santo Angelo, Telêmaco Borba, Paraná <br>
-            <img src="images/telefone.jpg" alt="Telefone" widht="120" height="120"> (42) 9999-9999 <br>
-            <img src="images/email.jpg" alt="Email" widht="120" height="120"> emailfulano@gmail.com <br>
+            <img src="./images/localização.jpg" alt="Localização" widht="120" height="120"> Rua João da Silva, Santo Angelo, Telêmaco Borba, Paraná <br>
+            <img src="./images/telefone.jpg" alt="Telefone" widht="120" height="120"> (42) 9999-9999 <br>
+            <img src="./images/email.jpg" alt="Email" widht="120" height="120"> emailfulano@gmail.com <br>
         </p>
         <hr>
     </body>
 </html>
-    
-            
