--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <hr>
         <h2> Formação Acadêmica </h2>
         <p>
-            Técnico em  Informática Para a Internet pelo <a href="https://ifpr.edu.br/"&gt; Instituto Federal do Paraná> e Análise de Desenvolvimento de Sistema pela <a href="https://www.utfpr.edu.br/"&gt; Universidade Tecnológica Federal do Paraná. </a>
+            Técnico em  Informática Para a Internet pelo <a href="https://ifpr.edu.br/"&gt; Instituto Federal do Paraná a> e Análise de Desenvolvimento de Sistema pela</a> </a> href="https://www.utfpr.edu.br/"&gt; Universidade Tecnológica Federal do Paraná. </a>
+        </a>
         </p>
         <hr>
         <h2> Experiência Profissional </h2>
