--- a/index.html
+++ b/index.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
     <head>
-        <title> Currículo Fulano de Tal </title>
         <meta charset="UTF-8">
+        <title>Currículo de Fulano de Tal</title>
     </head>
     <body>
-        <hr>
-        <img src="./images/avatar.jpg" alt="Avatar-de-homem" width="120" height="120">
-        <h1> Fulano de Tal </h1>
-        <hr>
-        <h2> Perfil </h2>
-        <p>
-            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-        </p>
-        <p>
-            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.
-        </p>
-        <hr>
-        <h2> Principais competências </h2>
-        <p>
-            Programador HTML; <br>
-            Desenvolvimento FrontEnd; <br>
-            Bla; <br>
-            Bla; <br>
-            Bla; <br>
-        </p>
-        <hr>
-        <h2> Formação Acadêmica </h2>
-        <p>
-            Técnico em  Informática Para a Internet pelo <a> href="https://ifpr.edu.br/"&gt; Instituto Federal do Paraná </a> e Análise de Desenvolvimento de Sistema pela <a> href="https://www.utfpr.edu.br/"&gt; Universidade Tecnológica Federal do Paraná. </a>
-        </p>
-        <hr>
-        <h2> Experiência Profissional </h2>
-        <p>
-            Empresa X (2021-2022) <br>
-            Empresa Y (2022-2024) <br>
-            Empresa Z (2024-Atual) <br>
-        </p>
-        <hr>
-        <h2> Contato </h2>
-        <p>
-            <img src="./images/localização.jpg" alt="Localização" widht="120" height="120"> Rua João da Silva, Santo Angelo, Telêmaco Borba, Paraná <br>
-            <img src="./images/telefone.jpg" alt="Telefone" widht="120" height="120"> (42) 9999-9999 <br>
-            <img src="./images/email.jpg" alt="Email" widht="120" height="120"> emailfulano@gmail.com <br>
+      <hr>
+        <img src="images/avatar.jpg" width="120" height="120" alt="Avatar">
+      <h1>Fulano de Tal</h1>
+      <hr>
+      <h2>Perfil</h2>
+        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.</p>
+      <hr>
+      <h2>Principais Competências</h2>
+        <p>Programador HTML;<br>
+        Desenvolvimento FrontEnd;<br>
+        Bla Bla;<br>
+        Bla Bla;<br>
+        Bla Bla;</p>
+      <hr>
+      <h2>Formação Acadêmica</h2>
+        <p>Técnico em Informática para Internet pelo <a href="https://www.ifpr.edu.br">Instituto Federal do Paraná</a> (2020) e Tecnólogo em Análise e Desenvolvimento de Sistemas pela <a href="https://www.utfpr.edu.br">Universidade Tecnológica Federal do Paraná</a> (2024).</p>
+      <hr>
+        <h2>Experiência Profissional</h2>
+        <p>Empresa X (2021-2022)</p>
+        <p>Empresa Y (2022-2024)</p>
+        <p>Empresa Z (2024-Atual)</p>
+      <hr>
+        <h2>Contato</h2>
+        <img src="./images/localização.jpg" alt="Localização" widht="120" height="120"> Rua Ponce, São francisco, Telêmaco Borba, Casa da Alissa <br>
+        <img src="./images/telefone.jpg" alt="Telefone" widht="120" height="120"> (42) 9999-9999 <br>
+        <img src="./images/email.jpg" alt="Email" widht="120" height="120"> emailfulano@gmail.com <br>
         </p>
         <hr>
     </body>
